workx-rs/tui/src/bottom_pane/snapshots/workx_tui__bottom_pane__tests__status_timer_survives_hidden_row.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 2570
expression: "render_snapshot(&pane, area)"
---
• Working (42s • esc to interrupt)      
                                        
                                        
› Ask Workx to do anything              
                                        
  ? for shortcuts    100% context left
